add linkedin profile

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
                             <h4>DIVYANSH JAIN</h4>
                             <p class="text-muted">PRESIDENT</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/divyansh-jain-719202229/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -238,7 +238,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
                             <h4>NISHANT SINGH</h4>
                             <p class="text-muted">GUIDE</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/tesla59/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -246,7 +246,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
                             <h4>MOHMAD HUZAIFA</h4>
                             <p class="text-muted">DOMST</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/mohammad-huzaifa-90a77b230/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -254,7 +254,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/4.jpg" alt="..." />
                             <h4>MANASVI SINGH</h4>
                             <p class="text-muted">Universal Crush</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/manasvi-s-0ab5b5229/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -262,7 +262,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/5.jpg" alt="..." />
                             <h4>ANUSHKA SINHA</h4>
                             <p class="text-muted">SILENT KILLER</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/anushka-sinha-49a614229/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -270,7 +270,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/6.jpg" alt="..." />
                             <h4>SALONI CHAUDHARY</h4>
                             <p class="text-muted">Hawa Hawai</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/saloni-chaudhary-9a818822a/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -278,7 +278,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/7.jpg" alt="..." />
                             <h4>KARAN ANAND</h4>
                             <p class="text-muted">Busy Guy | Startup Wale</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/karan-anand-455a97229/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -286,7 +286,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/8.jpg" alt="..." />
                             <h4>SHASHANK AGARWAL</h4>
                             <p class="text-muted">Teacher OP</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/shashank-agrawal-843b6a229/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -294,7 +294,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/9.jpg" alt="..." />
                             <h4>AYUSH JAIN</h4>
                             <p class="text-muted">Mr. Uncensored</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/ayush-jain-315b51228/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -302,7 +302,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/10.jpg" alt="..." />
                             <h4>MANSI MITTAL</h4>
                             <p class="text-muted">MOMMY</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/mansi-mittal-a79b64236/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -310,7 +310,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/11.jpg" alt="..." />
                             <h4>JIYA RATHORE</h4>
                             <p class="text-muted">Soti Basi</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/jiya-rathore-a63076232/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -318,7 +318,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/12.jpg" alt="..." />
                             <h4>HARSHITA LAKHCHAURAH</h4>
                             <p class="text-muted">Mam</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/harshita-lakhchaura-a29862223/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -326,7 +326,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/13.jpg" alt="..." />
                             <h4>SHAILLY KUMAR</h4>
                             <p class="text-muted">Vadapav</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/shailly-kumar-7331ba229/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -334,7 +334,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/14.jpg" alt="..." />
                             <h4>ATHARV NAGORE</h4>
                             <p class="text-muted">Attu Bhai</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/atharva-nagore-509b631ba/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -342,7 +342,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/15.jpg" alt="..." />
                             <h4>SANYAM KUMAR</h4>
                             <p class="text-muted">Sk14</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/sanyam-kumar-12b1b4227/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -350,7 +350,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/16.jpg" alt="..." />
                             <h4>ARYA SHARMA</h4>
                             <p class="text-muted">Astoarya</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/arya-sharma001/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -358,7 +358,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/17.jpg" alt="..." />
                             <h4>SWATI ANAND</h4>
                             <p class="text-muted">Ms Innocent</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/swati-anand-333b93228/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -366,7 +366,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/18.jpg" alt="..." />
                             <h4>SHREEM ASATI</h4>
                             <p class="text-muted">Tompper</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/shreem-asati-428b34232/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -374,7 +374,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/19.jpg" alt="..." />
                             <h4>SAMBHAV DIXIT</h4>
                             <p class="text-muted">Chad Boy</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/sambhav-dixit-016925188/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -382,7 +382,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/20.jpg" alt="..." />
                             <h4>ANISH KUMAR</h4>
                             <p class="text-muted">Army Canteen</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/an525ish/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -390,7 +390,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/21.jpg" alt="..." />
                             <h4>NAMANDEEP SINGH</h4>
                             <p class="text-muted">PDF Scanner</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/naman991/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                    
